force-app/main/default/objects/HealthCloudGA__CarePlanGoal__c/fields/Goal_Category__c.field-meta.xml
<CustomField>
    <fullName>Goal_Category__c</fullName>
    <label>Goal Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>