force-app/main/default/objects/HealthCloudGA__CarePlanGoal__c/fields/isCustom__c.field-meta.xml
<CustomField>
    <fullName>isCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify that whether the created problem is custom or Templatalized.</description>
    <label>isCustom</label>
    <type>Checkbox</type>
</CustomField>