force-app/main/default/objects/HealthCloudGA__CarePlanGoal__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>